inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
      - name: inventory
        image: hashicorp/http-echo
        args:
          - "-text=Inventory Service 🏬"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: ingress-nginx
spec:
  selector:
    app: inventory
  ports:
  - port: 80
    targetPort: 5678
