payments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
      - name: payments
        image: hashicorp/http-echo
        args:
          - "-text=Payments Service 💳"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: ingress-nginx
spec:
  selector:
    app: payments
  ports:
  - port: 80
    targetPort: 5678
