shipping-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
      - name: shipping
        image: hashicorp/http-echo
        args:
          - "-text=Shipping Service 🚚"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: shipping
  namespace: ingress-nginx
spec:
  selector:
    app: shipping
  ports:
  - port: 80
    targetPort: 5678
