users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: users
        image: hashicorp/http-echo
        args:
          - "-text=Users Service 🚀"
        ports:
        - containerPort: 5678


---

apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: ingress-demo
spec:
  selector:
    app: users
  ports:
  - port: 80
    targetPort: 5678
