Ingress Resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: demo.myapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 80
      - path: /users(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 80
      - path: /orders(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: orders
            port:
              number: 80
      - path: /payments(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: payments
            port:
              number: 80
      - path: /inventory(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: inventory
            port:
              number: 80
      - path: /shipping(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: shipping
            port:
              number: 80
